[Fix] Restore vanilla sky and clouds fallback